feature manage receipt #7

--- a/src/apartment_manager/src/main/resources/databases.properties
+++ b/src/apartment_manager/src/main/resources/databases.properties
@@ -1,6 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.showSql=false
 hibernate.connection.driverClass=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/apartment_db
+hibernate.connection.url=jdbc:mysql://localhost:3306/apartments
 hibernate.connection.username=root
-hibernate.connection.password=Admin@123
+hibernate.connection.password=root
