--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/main/webapp/META-INF
 backend/.idea
 frontend/node_modules
 frontend/package-lock.json
+backend/src/main/resources/databases.properties
