--- a/src/apartment_manager/pom.xml
+++ b/src/apartment_manager/pom.xml
@@ -20,7 +20,11 @@
             <artifactId>org.eclipse.persistence.core</artifactId>
             <version>2.7.12</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
