--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -165,7 +165,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-      
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+
 
     </dependencies>
 
