config(deploy): - add Dockerfile & docker-compose - config pom.xml for maven plugins - update apartment.sql

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ backend/.idea
 frontend/node_modules
 frontend/package-lock.json
 backend/src/main/resources/databases.properties
+backend/Dockerfile
