--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@ target
 .settings
 src/main/webapp/META-INF
 .idea
-*.iml
+# *.iml
 backend/.idea
 frontend/node_modules
 frontend/package-lock.json
 backend/src/main/resources/databases.properties
 deploy/webapps
-src
+./src
+frontend/src
