--- a/frontend/Apartment_Fe/package.json
+++ b/frontend/Apartment_Fe/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.2",
+    "javascript-time-ago": "^2.5.10",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
