--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -171,6 +171,12 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.5.2</version>
         </dependency> 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.1.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
