--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -111,12 +111,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-websocket</artifactId>
+            <artifactId>spring-messaging</artifactId>
             <version>5.3.28</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-messaging</artifactId>
+            <artifactId>spring-websocket</artifactId>
             <version>5.3.28</version>
         </dependency>
         <dependency>
@@ -172,6 +172,11 @@
             <version>5.6.2</version>
         </dependency>
         <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.31</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>5.6.2</version>
@@ -187,7 +192,6 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-        </dependency> 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -199,7 +203,6 @@
             <version>6.1.1.Final</version>
         </dependency>
     </dependencies>
-
     <build>
 
         <plugins>
