--- a/frontend/Apartment_Fe/package.json
+++ b/frontend/Apartment_Fe/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "javascript-time-ago": "^2.5.10",
+    "js-cookie": "^3.0.5",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
