--- a/frontend/Apartment_Fe/package.json
+++ b/frontend/Apartment_Fe/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -11,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "javascript-time-ago": "^2.5.10",
+    "joi": "^17.13.3",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
