--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,13 +17,9 @@ http {
     keepalive_timeout 65;
     server {
         listen 80;
-        server_name webclient;
-        # location /api/ {
-        #     proxy_pass http://nodejs:8080;
-        # }
-        location /api/ {
-            resolver 127.0.0.11;
-            proxy_pass http://backend:8080/api/ ;
+        location /apartment_manager/api/ {
+            # resolver 127.0.0.11;
+            proxy_pass http://backend:8080 ;
         }
         location / {
             root /usr/share/nginx/html;
