--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -168,7 +168,7 @@ services:
             # Copies the Let's Encrypt certificate locally for ease of backing up
             - ./letsencrypt:/letsencrypt
               # Mounts the Traefik static configuration inside the Traefik container
-            - ./traefik.yml:/etc/traefik/traefik.yml
+            - ./traefik/traefik.yml:/etc/traefik/traefik.yml
             - ./logs:/var/log/traefik/
         healthcheck:
             test: ['CMD', 'traefik', 'healthcheck']
