--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,9 @@ ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
 ENV TOMCAT_HOME=/opt/tomcat
 
 # Tải và cài đặt Tomcat
-RUN wget https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.100/bin/apache-tomcat-8.5.100.tar.gz
+# RUN wget https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.100/bin/apache-tomcat-8.5.100.tar.gz  #? not found
+# RUN https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.100/bin/apache-tomcat-8.5.100.tar.gz
+RUN wget https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.91/bin/apache-tomcat-9.0.91.tar.gz
 RUN tar xzvf apache-tomcat-*.tar.gz -C /opt/tomcat --strip-components=1
 
 COPY ./tomcat/xml/* /opt/tomcat/conf/ 
